samples/_failures_safe/1761196007_ff5c0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f43d787.c: In function ‘main’:
./samples/SAFE/__tmp_3f43d787.c:168:9: error: expected declaration or statement at end of input
  168 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_3f43d787.c:168:9: error: expected declaration or statement at end of input
